// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectStatus defaults to unknown state 1`] = `
[
  <button
    className="unknown"
    onClick={[Function]}
  >
    <span
      className="indicator"
    >
      ◉
    </span>
     
    Unknown
  </button>,
  ",",
]
`;

exports[`ObjectStatus displays the state found in the response 1`] = `
[
  <button
    className="inactive"
    onClick={[Function]}
  >
    <span
      className="indicator"
    >
      ◉
    </span>
     
    Inactive
  </button>,
  ",",
]
`;
